--- a/less/bootstrap/breadcrumbs.less
+++ b/less/bootstrap/breadcrumbs.less
@@ -3,7 +3,8 @@
 
 .breadcrumb {
   padding: 7px 14px;
-  margin: 0 0 @baseLineHeight;
+  width: @site_width;
+  margin: 0 0 @baseLineHeight -14px;
   #gradient > .vertical(@white, #f5f5f5);
   border: 1px solid #ddd;
   .border-radius(3px);
